HTML structure done only page3 is left

--- a/index.html
+++ b/index.html
@@ -158,7 +158,83 @@
                 <div class="underline"></div>
             </div>
         </div>
-        <div id="page5"></div>
+        <div id="page5">
+            <div class="marquee">
+                <div class="m">
+                    <p><span>Sport</span> -</p>
+                    <p>Technology -</p>
+                    <p><span>Fashion</span> -</p>
+                </div>
+                <div class="m">
+                    <p>Sport -</p>
+                    <p><span>Technology</span> -</p>
+                    <p>Fashion -</p>    
+                </div>
+            </div>
+            <div class="marquee2">
+                <div class="m2">
+                    <p><span>Science</span> -</p>
+                    <p>Partners -</p>
+                    <p><span>Travel</span> -</p>
+                </div>
+                <div class="m2">
+                    <p>Science -</p>
+                    <p><span>Partners</span> -</p>
+                    <p>Travel -</p>
+                </div>
+            </div>
+            <div class="marquee">
+                <div class="m">
+                    <p><span>Design</span> -</p>
+                    <p>Beauty -</p>
+                    <p><span>Real Estate</span> -</p>
+                </div>
+                <div class="m">
+                    <p>Design -</p>
+                    <p><span>Beauty</span> -</p>
+                    <p>Real Estate -</p>
+                </div>
+            </div>
+            <div class="marquee2">
+                <div class="m2">
+                    <p><span>Music</span> -</p>
+                    <p>Automotive -</p>
+                    <p><span>Hotels</span> -</p>
+                </div>
+                <div class="m2">
+                    <p>Music -</p>
+                    <p><span>Automotive</span> -</p>
+                    <p>Hotels -</p>
+                </div>
+            </div>
+
+        </div>
+        <div id="footer">
+            <h1>Let's Create</h1>
+            <div class="underline"></div>
+            <div id="footer-div">
+                <div class="box">
+                    <h6>Socials</h6>
+                    <h5>Dribbble</h5>
+                    <h5>Behance</h5>
+                    <h5>Instagram</h5>
+                    <h5>Facebook</h5>
+                    <h5>X</h5>
+                    <h5>YouTube</h5>
+                </div>
+                <div class="box">
+                    <h6>Address</h6>
+                    <h5>Originally from Kharkiv,</h5>
+                    <h5>working globally</h5>
+                </div>
+                <div class="box">
+                    <h6>Say Hi!</h6>
+                    <h5>info@obys.agency</h5>
+                </div>
+            </div>
+            <div class="underline"></div>
+            <h5>Obys Agency &copy 2025</h5>
+        </div>
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.7/gsap.min.js" integrity="sha512-f6bQMg6nkSRw/xfHw5BCbISe/dJjXrVGfz9BSDwhZtiErHwk7ifbmBEtF9vFW8UNIQPhV2uEFVyI/UHob9r7Cw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
