Added all the animations & the project has now been completed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Obys Clone</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="shortcut icon" href="./Favicon.png" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"> -->
     <link rel="stylesheet" href="https://unpkg.com/lenis@1.2.3/dist/lenis.css">
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
@@ -14,7 +13,6 @@
 </head>
 <body>
 
-    <!-- <div id="cursor"></div> -->
     <div id="loader">
         <div id="wait">
             Please wait <br>
@@ -84,14 +82,23 @@
         <div id="page3">
             <h1>Our Projects</h1>
             <div class="underline"></div>
+            <div id="imageheadings1">
+                <h2 id="olga" class="img-head">OLGA PRUDKA</h2>
+                <h2 id="ochi" class="img-head">OCHI</h2>    
+            </div>
+            <div id="imageheadings2">
+                <h2 id="velocity" class="img-head">VELOCITY</h2>
+                <h2 id="david" class="img-head">DAVID LAXER</h2>    
+            </div>
+
             <div id="image-div-container">
                 <div class="image-div">
-                    <img src="https://images.unsplash.com/photo-1648140574809-29426528395e?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw5NHx8fGVufDB8fHx8fA%3D%3D" alt="">
-                    <img src="https://images.unsplash.com/photo-1741974865142-2c5b965bab06?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzM3x8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <img src="/Images/img-1-1.png" alt="">
+                    <img src="/Images/img-1-2.png" alt="">
                 </div>
                 <div class="image-div">
-                    <img src="https://images.unsplash.com/photo-1648140574809-29426528395e?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw5NHx8fGVufDB8fHx8fA%3D%3D" alt="">
-                    <img src="https://images.unsplash.com/photo-1741974865142-2c5b965bab06?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzM3x8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <img src="/Images/img-2-1.png" alt="">
+                    <img src="/Images/img-2-2.png" alt="">
                 </div>
                 <div class="page3-circle1">
                     <svg class="button__arrow" viewBox="0 0 91 118" fill="none">
@@ -107,15 +114,14 @@
                             <p>It will make you WOW! 😉</p>
                         </div>
                 </div>
-                <div class="image-div">
-                    <img src="https://images.unsplash.com/photo-1648140574809-29426528395e?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw5NHx8fGVufDB8fHx8fA%3D%3D" alt="">
-                    <img src="https://images.unsplash.com/photo-1741974865142-2c5b965bab06?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzM3x8fGVufDB8fHx8fA%3D%3D" alt="">
+                <div class="image-div">    
+                    <img src="/Images/img-3-1.jpg" alt="">
+                    <img src="/Images/img-3-2.jpg" alt="">
                 </div>
                 <div class="image-div">
-                    <img src="https://images.unsplash.com/photo-1648140574809-29426528395e?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw5NHx8fGVufDB8fHx8fA%3D%3D" alt="">
-                    <img src="https://images.unsplash.com/photo-1741974865142-2c5b965bab06?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzM3x8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <img src="/Images/img-4-1.png" alt="">
+                    <img src="/Images/img-4-2.png" alt="">
                 </div>
-
             </div>
         </div>
         <div id="page4">
@@ -249,7 +255,10 @@
 
         </div>
         <div id="footer">
-            <h1 id="letsCreate">Let's Create</h1>
+            <div class="footer-text">
+                <h1 class="text">Let's Create</h1>
+                <h2 class="text">Let's Create</h2>
+            </div>
             <div class="underline"></div>
             <div id="footer-div">
                 <div class="box">
@@ -276,8 +285,6 @@
         </div>
     </div>
     
-    <!-- Locomotive -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script> -->
      <!-- Lenis -->
     <script src="https://unpkg.com/lenis@1.2.3/dist/lenis.min.js"></script> 
     <!-- GSAP -->
@@ -290,12 +297,6 @@
     <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
     <!-- Shery JS -->
     <script  type="text/javascript" src="https://unpkg.com/sheryjs/dist/Shery.js"></script>
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <!-- Lettering JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.6.1/jquery.lettering.min.js" integrity="sha512-VJ/iYbiu1eJ6yLimfTi65t2R9TFcG5D9X8ZCfbbEFhTfPnKJh8byoKXEawi5ScJZBYL1eiirL1+MczZDx0Tz9Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- Textillate JS -->
-    <script src="https://cdn.jsdelivr.net/npm/textillate@0.4.1/jquery.textillate.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
