--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Obys Clone</title>
+    <title>Obys Agency</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="shortcut icon" href="./Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/lenis@1.2.3/dist/lenis.css">
